SF Primes/src/objects/Clone_Profile_Access__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Case_Account_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Account Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Products_at_Dealership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Products at Dealership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recap_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recap Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Account_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task (Account Plan)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task (Account)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_WebID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task (WebID)</label>
        <type>Checkbox</type>
    </fields>
    <label>Clone Profile Access</label>
</CustomObject>